; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_arb_program_shader.c_arbfp_add_sRGB_correction.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_arb_program_shader.c_arbfp_add_sRGB_correction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_string_buffer = type { i32 }

@.str = private unnamed_addr constant [32 x i8] c"SUBC %s, %s.x, srgb_consts1.x;\0A\00", align 1
@.str.1 = private unnamed_addr constant [38 x i8] c"POW %s.x (GE), %s.x, srgb_consts0.x;\0A\00", align 1
@.str.2 = private unnamed_addr constant [38 x i8] c"POW %s.y (GE), %s.y, srgb_consts0.x;\0A\00", align 1
@.str.3 = private unnamed_addr constant [38 x i8] c"POW %s.z (GE), %s.z, srgb_consts0.x;\0A\00", align 1
@.str.4 = private unnamed_addr constant [38 x i8] c"MUL %s.xyz (GE), %s, srgb_consts0.y;\0A\00", align 1
@.str.5 = private unnamed_addr constant [38 x i8] c"SUB %s.xyz (GE), %s, srgb_consts0.z;\0A\00", align 1
@.str.6 = private unnamed_addr constant [38 x i8] c"MUL %s.xyz (LT), srgb_consts0.w, %s;\0A\00", align 1
@.str.7 = private unnamed_addr constant [33 x i8] c"POW %s.x, %s.x, srgb_consts0.x;\0A\00", align 1
@.str.8 = private unnamed_addr constant [33 x i8] c"POW %s.y, %s.y, srgb_consts0.x;\0A\00", align 1
@.str.9 = private unnamed_addr constant [33 x i8] c"POW %s.z, %s.z, srgb_consts0.x;\0A\00", align 1
@.str.10 = private unnamed_addr constant [29 x i8] c"MUL %s, %s, srgb_consts0.y;\0A\00", align 1
@.str.11 = private unnamed_addr constant [29 x i8] c"SUB %s, %s, srgb_consts0.z;\0A\00", align 1
@.str.12 = private unnamed_addr constant [29 x i8] c"MUL %s, srgb_consts0.w, %s;\0A\00", align 1
@.str.13 = private unnamed_addr constant [29 x i8] c"SLT %s, srgb_consts1.x, %s;\0A\00", align 1
@.str.14 = private unnamed_addr constant [29 x i8] c"SGE %s, srgb_consts1.x, %s;\0A\00", align 1
@.str.15 = private unnamed_addr constant [21 x i8] c"MUL %s.xyz, %s, %s;\0A\00", align 1
@.str.16 = private unnamed_addr constant [25 x i8] c"MAD %s.xyz, %s, %s, %s;\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wined3d_string_buffer*, i8*, i8*, i8*, i8*, i8*, i64)* @arbfp_add_sRGB_correction to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @arbfp_add_sRGB_correction(%struct.wined3d_string_buffer* %0, i8* %1, i8* %2, i8* %3, i8* %4, i8* %5, i64 %6) #0 {
  %8 = alloca %struct.wined3d_string_buffer*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i64, align 8
  store %struct.wined3d_string_buffer* %0, %struct.wined3d_string_buffer** %8, align 8
  store i8* %1, i8** %9, align 8
  store i8* %2, i8** %10, align 8
  store i8* %3, i8** %11, align 8
  store i8* %4, i8** %12, align 8
  store i8* %5, i8** %13, align 8
  store i64 %6, i64* %14, align 8
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %46

17:                                               ; preds = %7
  %18 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %8, align 8
  %19 = load i8*, i8** %10, align 8
  %20 = load i8*, i8** %9, align 8
  %21 = call i32 (%struct.wined3d_string_buffer*, i8*, i8*, i8*, ...) @shader_addline(%struct.wined3d_string_buffer* %18, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i8* %19, i8* %20)
  %22 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %8, align 8
  %23 = load i8*, i8** %9, align 8
  %24 = load i8*, i8** %9, align 8
  %25 = call i32 (%struct.wined3d_string_buffer*, i8*, i8*, i8*, ...) @shader_addline(%struct.wined3d_string_buffer* %22, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.1, i64 0, i64 0), i8* %23, i8* %24)
  %26 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %8, align 8
  %27 = load i8*, i8** %9, align 8
  %28 = load i8*, i8** %9, align 8
  %29 = call i32 (%struct.wined3d_string_buffer*, i8*, i8*, i8*, ...) @shader_addline(%struct.wined3d_string_buffer* %26, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.2, i64 0, i64 0), i8* %27, i8* %28)
  %30 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %8, align 8
  %31 = load i8*, i8** %9, align 8
  %32 = load i8*, i8** %9, align 8
  %33 = call i32 (%struct.wined3d_string_buffer*, i8*, i8*, i8*, ...) @shader_addline(%struct.wined3d_string_buffer* %30, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.3, i64 0, i64 0), i8* %31, i8* %32)
  %34 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %8, align 8
  %35 = load i8*, i8** %9, align 8
  %36 = load i8*, i8** %9, align 8
  %37 = call i32 (%struct.wined3d_string_buffer*, i8*, i8*, i8*, ...) @shader_addline(%struct.wined3d_string_buffer* %34, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.4, i64 0, i64 0), i8* %35, i8* %36)
  %38 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %8, align 8
  %39 = load i8*, i8** %9, align 8
  %40 = load i8*, i8** %9, align 8
  %41 = call i32 (%struct.wined3d_string_buffer*, i8*, i8*, i8*, ...) @shader_addline(%struct.wined3d_string_buffer* %38, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.5, i64 0, i64 0), i8* %39, i8* %40)
  %42 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %8, align 8
  %43 = load i8*, i8** %9, align 8
  %44 = load i8*, i8** %9, align 8
  %45 = call i32 (%struct.wined3d_string_buffer*, i8*, i8*, i8*, ...) @shader_addline(%struct.wined3d_string_buffer* %42, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.6, i64 0, i64 0), i8* %43, i8* %44)
  br label %90

46:                                               ; preds = %7
  %47 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %8, align 8
  %48 = load i8*, i8** %10, align 8
  %49 = load i8*, i8** %9, align 8
  %50 = call i32 (%struct.wined3d_string_buffer*, i8*, i8*, i8*, ...) @shader_addline(%struct.wined3d_string_buffer* %47, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.7, i64 0, i64 0), i8* %48, i8* %49)
  %51 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %8, align 8
  %52 = load i8*, i8** %10, align 8
  %53 = load i8*, i8** %9, align 8
  %54 = call i32 (%struct.wined3d_string_buffer*, i8*, i8*, i8*, ...) @shader_addline(%struct.wined3d_string_buffer* %51, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.8, i64 0, i64 0), i8* %52, i8* %53)
  %55 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %8, align 8
  %56 = load i8*, i8** %10, align 8
  %57 = load i8*, i8** %9, align 8
  %58 = call i32 (%struct.wined3d_string_buffer*, i8*, i8*, i8*, ...) @shader_addline(%struct.wined3d_string_buffer* %55, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.9, i64 0, i64 0), i8* %56, i8* %57)
  %59 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %8, align 8
  %60 = load i8*, i8** %10, align 8
  %61 = load i8*, i8** %10, align 8
  %62 = call i32 (%struct.wined3d_string_buffer*, i8*, i8*, i8*, ...) @shader_addline(%struct.wined3d_string_buffer* %59, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.10, i64 0, i64 0), i8* %60, i8* %61)
  %63 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %8, align 8
  %64 = load i8*, i8** %10, align 8
  %65 = load i8*, i8** %10, align 8
  %66 = call i32 (%struct.wined3d_string_buffer*, i8*, i8*, i8*, ...) @shader_addline(%struct.wined3d_string_buffer* %63, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.11, i64 0, i64 0), i8* %64, i8* %65)
  %67 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %8, align 8
  %68 = load i8*, i8** %11, align 8
  %69 = load i8*, i8** %9, align 8
  %70 = call i32 (%struct.wined3d_string_buffer*, i8*, i8*, i8*, ...) @shader_addline(%struct.wined3d_string_buffer* %67, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.12, i64 0, i64 0), i8* %68, i8* %69)
  %71 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %8, align 8
  %72 = load i8*, i8** %12, align 8
  %73 = load i8*, i8** %9, align 8
  %74 = call i32 (%struct.wined3d_string_buffer*, i8*, i8*, i8*, ...) @shader_addline(%struct.wined3d_string_buffer* %71, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.13, i64 0, i64 0), i8* %72, i8* %73)
  %75 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %8, align 8
  %76 = load i8*, i8** %13, align 8
  %77 = load i8*, i8** %9, align 8
  %78 = call i32 (%struct.wined3d_string_buffer*, i8*, i8*, i8*, ...) @shader_addline(%struct.wined3d_string_buffer* %75, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.14, i64 0, i64 0), i8* %76, i8* %77)
  %79 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %8, align 8
  %80 = load i8*, i8** %9, align 8
  %81 = load i8*, i8** %10, align 8
  %82 = load i8*, i8** %12, align 8
  %83 = call i32 (%struct.wined3d_string_buffer*, i8*, i8*, i8*, ...) @shader_addline(%struct.wined3d_string_buffer* %79, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.15, i64 0, i64 0), i8* %80, i8* %81, i8* %82)
  %84 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %8, align 8
  %85 = load i8*, i8** %9, align 8
  %86 = load i8*, i8** %11, align 8
  %87 = load i8*, i8** %13, align 8
  %88 = load i8*, i8** %9, align 8
  %89 = call i32 (%struct.wined3d_string_buffer*, i8*, i8*, i8*, ...) @shader_addline(%struct.wined3d_string_buffer* %84, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.16, i64 0, i64 0), i8* %85, i8* %86, i8* %87, i8* %88)
  br label %90

90:                                               ; preds = %46, %17
  ret void
}

declare dso_local i32 @shader_addline(%struct.wined3d_string_buffer*, i8*, i8*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
